--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 title: My page 
 layout: default 
 ---
+<!-- content in here is loaded as {{content}} -->
 
+<p>beans text</p>
 
 <ul> 
 {% for post in site.posts %} 
