--- a/blog.html
+++ b/blog.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
 <p>Blog</p>
+
+<ul> 
+{% for post in site.posts %} 
+	<li> 
+		<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a> 
+	</li> 
+{% endfor %} 
+</ul>
