--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 title: My page 
 layout: default 
 ---
-<ul> 
-{% for post in site.posts %} 
-	<li> 
-		<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a> 
-	</li> 
-{% endfor %} 
-</ul>
+<div class="center-col">
+	<p>front page</p>
+</div>
