--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,11 @@ layout: default
 <ul> 
 {% for post in site.posts %} 
 	<li> 
-		<a href="{{ post.url}}">{{ post.title }}</a> 
+		<img src="/images/{{ post.url }}.png">
+		<br>
+		<a href="{{ post.url }}">{{ post.title }}</a> 
+		<br>
+		<p>{{ post.excerpt }}</p>
 	</li> 
 {% endfor %} 
 </ul>
