--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ layout: default
 <ul> 
 {% for post in site.posts %} 
 	<li> 
-		<img src="/images/{{ post.url }}.png">
+		<img src="/images/{{ post.title }}.png">
 		<br>
 		<a href="{{ post.url }}">{{ post.title }}</a> 
 		<br>
