--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ layout: default
 <ul> 
 {% for post in site.posts %} 
 	<li> 
-		<img src="/images{{ post.basename }}.png">
+		<img src="/images{{ site.post.basename }}.png">
 		<br>
 		<a href="{{ post.url }}">{{ post.title }}</a> 
 		<br>
