--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,8 @@ layout: default
 <ul> 
 {% for post in site.posts %} 
 	<li> 
+
+		<img src="/images/{{ post.title | replace: '/' , '-'}}">
 		<img src="/images{{ site.post.basename }}.png">
 		<br>
 		<a href="{{ post.url }}">{{ post.title }}</a> 
