--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ layout: default
 {% for post in site.posts %} 
 	<li> 
 
-		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}">
+		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
 		<br>
 		<a href="{{ post.url }}">{{ post.title }}</a> 
 		<br>
