--- a/blog.html
+++ b/blog.html
@@ -11,10 +11,10 @@ layout: default
 	<li> 
 		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
 		<br>
-		<a href="{{ post.url }}">{{ post.id | replace: 'post.date' , '' | replace: '-' , ' ' | remove_first: " " }}</a> 
-		<p>{{post.date}}</p>
+		<!-- <a href="{{ post.url }}">{{ post.id | slice:  }}</a>  -->
+		<p>{{post.id | replace: {{ post.id | truncate: 10 }}  , '' }}</p>
 		<br>
-		<p>{{ post.content | truncate: 10 }}</p>
+		<p>{{ post.content }}</p>
 	</li> 
 {% endfor %} 
 </ul>
