--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@ layout: default
 		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
 		<br>
 		<!-- <a href="{{ post.url }}">{{ post.id | slice:  }}</a>  -->
-		<p>{{post.id | replace: 2  , '' }}</p>
+		<p>{{post.id | replace: '2'  , '' }}</p>
 		<br>
 		<p>{{ post.content }}</p>
 	</li> 
