--- a/blog.html
+++ b/blog.html
@@ -11,10 +11,10 @@ layout: default
 	<li> 
 		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
 		<br>
-		<!-- <a href="{{ post.url }}">{{ post.id | slice:  }}</a>  -->
+		
 		<p>{{post.id | replace: '2'  , '' }}</p>
 		<br>
-		<p>{{ post.content }}</p>
+		<p>{{ post.id }}</p>
 	</li> 
 {% endfor %} 
 </ul>
