--- a/blog.html
+++ b/blog.html
@@ -11,10 +11,9 @@ layout: default
 	<li> 
 		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
 		<br>
-		
-		<a href="post.url">{{post.id | slice: 12, 100  | replace: '-'  , ' ' }}</a>
+		<a href="post.url">{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</a>
 		<br>
-		<p>{{ post.content }}</p>
+		<p>{{ post.content | truncate: 50}}</p>
 	</li> 
 {% endfor %} 
 </ul>
