--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@ layout: default
 	<li> 
 		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
 		<br>
-		<a href="post.url">{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</a>
+		<a href="{{post.url}}">{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</a>
 		<br>
 		<p>{{ post.content | truncate: 100}}</p>
 	</li> 
