--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,11 @@ layout: default
 <ul> 
 {% for post in site.posts %} 
 	<li> 
-		<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
-		<br>
-		<a href="{{post.url}}">{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</a>
+		<a href="{{post.url}}"> 
+			<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
+			<br>
+			{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}
+		</a>
 		<br>
 		<p>{{ post.content | truncate: 100}}</p>
 	</li> 
