--- a/blog.html
+++ b/blog.html
@@ -2,22 +2,25 @@
 title: My page 
 layout: default 
 ---
+<div class="flex-all center-col">
 
-<!DOCTYPE html>
-<p>Blog</p>
+	<p>Blog</p>
 
-<ul> 
-{% for post in site.posts %} 
-	<li> 
-		<a href="{{post.url}}"> 
-			<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
+
+	<ul> 
+	{% for post in site.posts %} 
+		<li> 
+			<a href="{{post.url}}"> 
+				<img src="/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png">
+				<br>
+				{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}
+				<br>
+				{{ post.date | date: "%-d %B %Y" }}
+			</a>
 			<br>
-			{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}
-			<br>
-			{{ post.date | date: "%-d %B %Y" }}
-		</a>
-		<br>
-		<p>{{ post.content | truncate: 100 | strip_newlines }}</p>
-	</li> 
-{% endfor %} 
-</ul>
+			<p>{{ post.content | truncate: 150 | strip_newlines }}</p>
+		</li> 
+	{% endfor %} 
+	</ul>
+
+</div>
