--- a/blog.html
+++ b/blog.html
@@ -13,12 +13,12 @@ layout: default
 				<div class="image-preview" style="background-image: url('/images/{{ post.id | replace: '/' , '-' | remove_first: '-' }}.png');">
 				</div>
 
-				<div class="content-preveiw">
-					<h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5>
+				<div class="content-preview">
+					<a href="{{post.url}}"><h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
 					<small>{{ post.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
 						<p>{{ post.content | strip_html | truncate: 200 }}</p>
-						<a href="{{post.url}}">+</a>
+						<a href="{{post.url}}">►</a>
 					</div>
 				</div>
 			</div>
