--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 title: My page 
 layout: default 
 ---
-<div class="flex-all center-col">
+<div class="flex-all center-col post-list">
 
 	<p>Blog</p>
 
