--- a/blog.html
+++ b/blog.html
@@ -26,5 +26,10 @@ layout: default
 		</li> 
 	{% endfor %} 
 	</ul>
+</div>
 
+<div class="subscription-box center-col flex-all">
+	<div class="sub-inner">
+		mailchimp
+	</div>
 </div>
