--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@ title: Winter Solace
 layout: default 
 ---
 <div class="snow"></div>
+<div class="hero-front">
+	<!-- <img src="/images/hero-front.png"> -->
+</div>
