--- a/index.html
+++ b/index.html
@@ -6,3 +6,10 @@ layout: default
 <div class="hero-front">
 	<!-- <img src="/images/hero-front.png"> -->
 </div>
+
+
+<div style="width:100%; height:100px; display: flex; flex-direction: row;">
+	<div></div>
+	<div style="width: 500px;"></div>
+	<div></div>
+</div>
