--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
 </div>
 
 
-<div style="width:100%; height:100px; display: flex; flex-direction: row;">
-	<div></div>
-	<div style="width: 500px;"></div>
-	<div></div>
+<div class="hero-front">
+	<div class="hero-side"></div>
+	<div class="hero-front-image"></div>
+	<div class="hero-side"></div>
 </div>
