--- a/index.html
+++ b/index.html
@@ -13,3 +13,10 @@ layout: default
 	<div class="hero-front-image"></div>
 	<div class="hero-side"></div>
 </div>
+
+
+<div class="hero-front" style="z-index: -20">
+	<div class="hero-side"></div>
+	<div class="hero-front-image"></div>
+	<div class="hero-side"></div>
+</div>
