use real numbers

--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@ title: Winter Solace
 layout: default 
 ---
 <div class="snow"></div>
-<div class="hero-front">
-	<!-- <img src="/images/hero-front.png"> -->
-</div>
-
 
 <div class="hero-front">
 	<div class="hero-side"></div>
@@ -17,6 +13,6 @@ layout: default
 
 <div class="hero-front" style="z-index: -20">
 	<div class="hero-side"></div>
-	<div class="hero-front-image"></div>
+	<div class="hero-back-image"></div>
 	<div class="hero-side"></div>
 </div>
