--- a/index.html
+++ b/index.html
@@ -16,3 +16,7 @@ layout: default
 	<div class="hero-back-image"></div>
 	<div class="hero-side"></div>
 </div>
+
+<div class="center-col">
+	<img src="/images/title.png">
+</div>
