try saving it oops

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ layout: default
 	<div class="hero-side"></div>
 </div>
 
-<div class="center-col">
+<div class="center-col frontpage-content">
 	<img src="/images/title.png">
 </div>
