--- a/contact.html
+++ b/contact.html
@@ -11,4 +11,15 @@ layout: default
 	<meta property="og:image:height" content="900">
 </head>
 
+<div class="center-col">
+
 <p>contact info</p>
+
+<p>I am sam, a one person</p>
+
+<p>sam@sunlightafterdark.com</p>
+<p><a href="">facebook</a></p>
+<p><a href="">twitter</a></p>
+
+
+</div>
