--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@ layout: default
 <div class="center-col frontpage-content">
 	<img alt="Winter Solace" src="/images/title.png">
 
-	<p>Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</p>
+	<h5>Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
 	<img alt="cool screenshot of grey being whistful" src="/images/social.png">
 
-	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</p>
+	<h5>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
  	<img alt="magic demo gif" src="/images/social.png">
 
-	<p>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</p>
+	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
  	<img alt="rotating gif of talking to different characters" src="/images/social.png">
 
- 	<p>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</p>
+ 	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</p>
  	<img alt="pretty gif of walking through world with grey in middle staying still while walking" src="/images/social.png">
 
-	<p>It’s currently in production, and if you’re interested to see it’s development, you can keep up to date on progress <a href="">in the blogs</a>, where I also go into game design</p>
+	<h5>It’s currently in production, and if you’re interested to see it’s development, you can keep up to date on progress <a href="">in the blogs</a>, where I also go into game design</h5>
 
-	<p>If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation</p>
+	<h5>If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation</h5>
 	<p>mailchimp box</p>
 
- 	<p>currently looking for a publisher, if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</p>
+ 	<h5>currently looking for a publisher, if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
 
 
