--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@ layout: default
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</p>
  	<img alt="pretty gif of walking through world with grey in middle staying still while walking" src="/images/social.png">
 
-	<h5>It’s currently in production, and if you’re interested to see it’s development, you can keep up to date on progress <a href="">in the blogs</a>, where I also go into game design</h5>
+	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="">in the blogs</a>, where I also go into the game design.</h5>
 
-	<h5>If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation</h5>
+	<h5>If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
 	<p>mailchimp box</p>
 
- 	<h5>currently looking for a publisher, if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
+ 	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
 
 
