little more edit

--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@ layout: default
 	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
  	<img alt="rotating gif of talking to different characters" src="/images/social.png">
 
- 	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</p>
+ 	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
  	<img alt="pretty gif of walking through world with grey in middle staying still while walking" src="/images/social.png">
 
-	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="">in the blogs</a>, where I also go into the game design.</h5>
-
-	<h5>If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
+	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
+	<br>
+	<br>
+	Or, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
 	<p>mailchimp box</p>
 
  	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
+
+ 	<p><a href="#nav">Back to top</a></p>
 
 
 </div>
