--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ layout: default
 					<small>{{ post.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
 						<p>{{ post.content | strip_html | truncate: 180 }}</p>
-						<a class="triangle-link" href="{{post.url}}">►►►</a>
+						<a class="triangle-link" href="{{post.url}}">▶▶▶</a>
 					</div>
 				</div>
 			</div>
