--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,9 @@ layout: default
 	<meta property="og:image:height" content="900">
 </head>
 
+<div class="center-col">
+
+</div>
 
 <div class="flex-all center-col post-list">
 
@@ -26,7 +29,7 @@ layout: default
 					<a href="{{post.url}}"><h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
 					<small>{{ post.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
-						<p>{{ post.content | strip_html | truncate: 180 }}</p>
+						<p>{{ post.content | strip_html | truncate: 160 }}</p>
 						<a class="triangle-link" href="{{post.url}}">▶▶▶</a>
 					</div>
 				</div>
