--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: default
  	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
 
- 	<p><a href="#nav">Back to top</a></p>
+ 	<p style="text-align: center; margin-top: 60px;"><a href="#nav">Back to top</a></p>
 
 
 </div>
