--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ layout: default
 	<br>
 	<br>
 	Or, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
-	<p>mailchimp box</p>
+
+	{% include mailchimp-signup.html %}
 
  	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
