--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,5 @@ layout: default
 </div>
 
 <div class="subscription-box center-col flex-all">
-	<div class="sub-inner">
-		mailchimp
-	</div>
+	{% include mailchimp-signup.html %}
 </div>
