--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
 	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
 	<br>
 	<br>
-	Or, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
+	Plus, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
 
 	{% include mailchimp-signup.html %}
 
