--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,14 @@ layout: default
 </head>
 
 <div class="center-col">
+	<div class="contact-info">
+		<h5>Contact</h5>
 
-<p>contact info</p>
+		<p>Hello, I am sam, a one person</p>
+		<img alt="Sam Ballard Image" src="/images/sam.png">
 
-<p>I am sam, a one person</p>
+		<p>sam@wintersolacegame.com</p>
+		<p><a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a></p>
 
-<p>sam@sunlightafterdark.com</p>
-<p><a href="">facebook</a></p>
-<p><a href="">twitter</a></p>
-
-
+	</div>
 </div>
