--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
 </div>
 
 <div class="center-col frontpage-content">
-	<img alt="Winter Solace" src="/images/title.png">
+	<img style="max-width: 480px; align-self: center;" alt="Winter Solace" src="/images/title.png">
 
 	<h5>Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
 	<img alt="cool screenshot of grey being whistful" src="/images/social.png">
