--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@ layout: default
 		<h5>Contact</h5>
 
 		<p>Hello, I am sam, a one person</p>
-		<img alt="Sam Ballard Image" src="/images/sam.png">
+		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
 
 		<p>sam@wintersolacegame.com</p>
-		<p><a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a></p>
+		<p><a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" style="height: 60px" src="/images/twitter-logo.png"></a></p>
 
 	</div>
 </div>
