--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@ layout: default
 	<div class="contact-info">
 		<h5>Contact</h5>
 
-		<p>Hello, I am sam, a one person</p>
+		<p>Hello, I am sam, a one person with many ambitions</p>
 		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
 
-		<p>sam@wintersolacegame.com</p>
+		<p><a href="mailto:sam@wintersolacegame.com">sam@wintersolacegame.com</a></p>
 		<p><a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" style="height: 60px" src="/images/twitter-logo.png"></a></p>
 
 	</div>
