many tiny things

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 
 	{% include mailchimp-signup.html %}
 
- 	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at sam@wintersolacegame.com</h5>
+ 	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at <a href="mailto:sam@wintersolacegame.com">sam@wintersolacegame.com</a></h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
 
  	<p style="text-align: center; margin-top: 60px;"><a href="#nav">Back to top</a></p>
