--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,11 @@ layout: default
 
 <div class="center-col">
 	<div class="contact-info">
-		<h5>Contact</h5>
-
-		<p>Hello, I am sam, a one person with many ambitions</p>
 		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
-
+		<p>Hello, I am sam, a one person with many ambitions</p>
+		
 		<p><a href="mailto:sam@wintersolacegame.com">sam@wintersolacegame.com</a></p>
-		<p><a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" style="height: 60px" src="/images/twitter-logo.png"></a></p>
+		<p><a href="https://twitter.com/BaronBlackmore" style="display: flex; align-items: center; padding: 0"><img alt="twitter logo" style="height: 36px" src="/images/twitter-logo.png"> @BaronBlackmore</a></p>
 
 	</div>
 </div>
