--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ layout: default
 <div class="center-col">
 	<div class="contact-info">
 		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
-		<p>Hello, I am sam, a one person with many ambitions</p>
+		<p>Hello, I am sam, one person with many ambitions</p>
 		
 		<p><a href="mailto:sam@wintersolacegame.com">sam@wintersolacegame.com</a></p>
 		<p><a href="https://twitter.com/BaronBlackmore" style="display: flex; align-items: center; padding: 0"><img alt="twitter logo" style="height: 36px" src="/images/twitter-logo.png"> @BaronBlackmore</a></p>
