--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@ title: Blog
 layout: default 
 ---
 <head>
-	<meta property="og:title" content="Winter Solace" />
+	<meta property="og:title" content="Wintercast" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
-	<meta property="og:image" content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:description" content="Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
+	<meta property="og:image" content="http://www.wintecastgame.com/images/social.png" />
 	<meta property="og:image:width" content="1500">
 	<meta property="og:image:height" content="900">
 </head>
