--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@ title: Contact
 layout: default 
 ---
 <head>
-	<meta property="og:title" content="Winter Solace" />
-	<meta property="og:description" content="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
+	<meta property="og:title" content="Wintercast" />
+	<meta property="og:description" content="Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:image" content="http://www.wintecastgame.com/images/social.png" />
 	<meta property="og:image:width" content="1500">
 	<meta property="og:image:height" content="900">
 </head>
@@ -16,7 +16,7 @@ layout: default
 		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
 		<p>Hello, I am sam, one person with many ambitions</p>
 		
-		<p><a href="mailto:sam@wintersolacegame.com">sam@wintersolacegame.com</a></p>
+		<p><a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></p>
 		<p><a href="https://twitter.com/BaronBlackmore" style="display: flex; align-items: center; padding: 0"><img alt="twitter logo" style="height: 36px" src="/images/twitter-logo.png"> @BaronBlackmore</a></p>
 
 	</div>
