--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 --- 
-title: Winter Solace
+title: Wintercast
 layout: default 
 ---
 <head>
-	<meta property="og:title" content="Winter Solace" />
-	<meta property="og:description" content="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
+	<meta property="og:title" content="Wintercast" />
+	<meta property="og:description" content="Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:image" content="http://www.wintecastgame.com/images/social.png" />
 	<meta property="og:image:width" content="1500">
 	<meta property="og:image:height" content="900">
 </head>
@@ -27,9 +27,9 @@ layout: default
 </div>
 
 <div class="center-col frontpage-content">
-	<img style="max-width: 480px; align-self: center;" alt="Winter Solace" src="/images/title.png">
+	<img style="max-width: 480px; align-self: center;" alt="Wintercast" src="/images/title.png">
 
-	<h5>Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
+	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
 	<img alt="cool screenshot of grey being whistful" src="/images/social.png">
 
 	<h5>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
@@ -48,7 +48,7 @@ layout: default
 
 	{% include mailchimp-signup.html %}
 
- 	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at <a href="mailto:sam@wintersolacegame.com">sam@wintersolacegame.com</a></h5>
+ 	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at <a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
 
  	<p style="text-align: center; margin-top: 60px;"><a href="#nav">Back to top</a></p>
