--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 	<img alt="Wintercast" src="/images/title.png">
 
 	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
-	<img alt="cool screenshot of grey being whistful" src="/images/social.png">
+	<img alt="cool screenshot of grey being whistful" src="/images/screenshot-forest.png">
 
 	<h5>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
  	<img alt="magic demo gif" src="/images/social.png">
