--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,8 @@ layout: default
 
 <div class="flex-all center-col post-list">
 
+	Coming Soon
+<!-- 
 	<ul> 
 	{% for post in site.posts %} 
 		<li> 
@@ -39,6 +41,7 @@ layout: default
 		</li> 
 	{% endfor %} 
 	</ul>
+	 -->
 </div>
 
 <div class="subscription-box center-col flex-all">
