--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@ layout: default
  	<img alt="rotating gif of talking to different characters" src="/images/social.png">
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
- 	<img alt="pretty gif of walking through world with grey in middle staying still while walking" src="/images/social.png">
+ 	<img alt="Grey standing at a snowy pier" src="/images/screenshot-forest.png">
 
 	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
 	<br>
 	<br>
-	Plus, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation.</h5>
+	Plus, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation. (when I have one)</h5>
 
 	{% include mailchimp-signup.html %}
 
- 	<h5>I'm currently looking for publisher support, so if you’re interested, or just want to shoot me a question, reach out at <a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></h5>
+ 	<h5>If you’re interested in knowing more, or just want to shoot me a question, reach out at <a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></h5>
  	<img alt="cliffhanger-y image" src="/images/social.png">
 
  	<p style="text-align: center; margin-top: 60px;"><a href="#nav">Back to top</a></p>
