tidy up coming soon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 	<img alt="Wintercast" src="/images/title.png">
 
 	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
-	<img alt="cool screenshot of grey being whistful" src="/images/screenshot-forest.png">
+	<img alt="screenshot of simple gameplay" src="/images/screenshot-forest.png">
 
 	<h5>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
  	<img alt="magic demo gif" src="/images/social.png">
@@ -40,6 +40,9 @@ layout: default
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
  	<img alt="Grey standing at a snowy pier" src="/images/screenshot-forest.png">
+ 	<img alt="Grey in front of a city gate" src="/images/screenshot-forest.png">
+	<img alt="Grey in the aether" src="/images/screenshot-forest.png">
+
 
 	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
 	<br>
