--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@ layout: default
 	<img alt="Wintercast" src="/images/title.png">
 
 	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
-	<img alt="screenshot of simple gameplay" src="/images/screenshot-forest.png">
+	<!-- <img alt="gif of talking to 3 characters" src="/images/screenshot-forest.png"> -->
+	<video width="100%" height="auto" controls autoplay loop>
+		<source src="video/conversations-demo.mp4" type="video/mp4">
+	</video>
+	
 
 	<h5>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
- 	<img alt="magic demo gif" src="/images/social.png">
+ 	<img alt="lighting a lamp and then picking it up" src="/images/social.png">
+ 	<!-- lamp lighting -->
+ 	<!-- seven flares -->
 
 	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
- 	<img alt="rotating gif of talking to different characters" src="/images/social.png">
+ 	<img alt="comic cutscenes of 3 characters, pomp, hunter, gdad" src="/images/social.png">
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
  	<img alt="Grey standing at a snowy pier" src="/images/screenshot-forest.png">
@@ -52,7 +58,7 @@ layout: default
 	{% include mailchimp-signup.html %}
 
  	<h5>If you’re interested in knowing more, or just want to shoot me a question, reach out at <a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></h5>
- 	<img alt="cliffhanger-y image" src="/images/social.png">
+ 	<img alt="text box with bite yes or no decision" src="/images/social.png">
 
  	<p style="text-align: center; margin-top: 60px;"><a href="#nav">Back to top</a></p>
 
