--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
 	<!-- <img alt="gif of talking to 3 characters" src="/images/screenshot-forest.png"> -->
 	<video width="100%" height="auto" controls autoplay loop>
-		<source src="video/conversations-demo.mp4" type="video/mp4">
+		<source src="video/conversations.mp4" type="video/mp4">
 	</video>
 	
 
