--- a/index.html
+++ b/index.html
@@ -30,19 +30,15 @@ layout: default
 	<img alt="Wintercast" src="/images/title.png">
 
 	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
-	<!-- <img alt="gif of talking to 3 characters" src="/images/screenshot-forest.png"> -->
-	<video width="100%" height="auto" controls autoplay loop>
-		<source src="video/conversations.mp4" type="video/mp4">
-	</video>
-	
 
 	<h5>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
  	<img alt="lighting a lamp and then picking it up" src="/images/social.png">
- 	<!-- lamp lighting -->
- 	<!-- seven flares -->
+ 	<!-- in a fight cast evade to dodge, cast flare -->
 
 	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
- 	<img alt="comic cutscenes of 3 characters, pomp, hunter, gdad" src="/images/social.png">
+	<video width="100%" height="auto" controls autoplay loop>
+		<source src="video/Pomp-chat.mp4" type="video/mp4">
+	</video>
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
  	<img alt="Grey standing at a snowy pier" src="/images/screenshot-forest.png">
