--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 
 	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
 	<video width="100%" height="auto" controls autoplay loop>
-		<source src="video/Pomp-chat.mp4" type="video/mp4">
+		<source src="video/speech-demo.mp4" type="video/mp4">
 	</video>
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
