--- a/index.html
+++ b/index.html
@@ -41,9 +41,17 @@ layout: default
 	</video>
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
- 	<img alt="Grey standing at a snowy pier" src="/images/screenshot-forest.png">
- 	<img alt="Grey in front of a city gate" src="/images/screenshot-forest.png">
-	<img alt="Grey in the aether" src="/images/screenshot-forest.png">
+
+
+	<video width="100%" height="auto" controls autoplay loop>
+		<source src="video/place-pier.mp4" type="video/mp4">
+	</video>
+	<video width="100%" height="auto" controls autoplay loop>
+		<source src="video/place-town.mp4" type="video/mp4">
+	</video>
+	<video width="100%" height="auto" controls autoplay loop>
+		<source src="video/place-spirit.mp4" type="video/mp4">
+	</video>
 
 
 	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
