--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@ layout: default
  	<!-- in a fight cast evade to dodge, cast flare -->
 
 	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
-	<video width="100%" height="auto" controls autoplay loop>
+	<video width="100%" height="auto" controls autoplay="autoplay" loop>
 		<source src="video/speech-demo.mp4" type="video/mp4">
 	</video>
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
 
 
-	<video width="100%" height="auto" controls autoplay loop>
+	<video width="100%" height="auto" controls autoplay="autoplay" loop>
 		<source src="video/place-pier.mp4" type="video/mp4">
 	</video>
-	<video width="100%" height="auto" controls autoplay loop>
+	<video width="100%" height="auto" controls autoplay="autoplay" loop>
 		<source src="video/place-town.mp4" type="video/mp4">
 	</video>
-	<video width="100%" height="auto" controls autoplay loop>
+	<video width="100%" height="auto" controls autoplay="autoplay" loop>
 		<source src="video/place-spirit.mp4" type="video/mp4">
 	</video>
 
