--- a/index.html
+++ b/index.html
@@ -29,16 +29,24 @@ layout: default
 <div class="center-col frontpage-content">
 	<img alt="Wintercast" src="/images/title.png">
 
-	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.
-		<br>
-	Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</h5>
+	<!-- video -->
+
+	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
  	<img alt="lighting a lamp and then picking it up" src="/images/social.png">
  	<!-- in a fight cast evade to dodge, cast flare -->
 
+ 	<h5>Features</h5>
+ 	<p><strong>Type-Cast</strong>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</p>
+
+
 	<h5>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</h5>
-	<video width="100%" height="auto" controls autoplay="autoplay" loop>
+	
+	<video width="100%" autobuffer="autobuffer" height="auto" controls autoplay="autoplay" loop>
+		<source src="video/speech-demo.mp4" type="video/mp4">
 		<source src="video/speech-demo.webm" type="video/webm">
 	</video>
+
+
 
  	<h5>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</h5>
 
