--- a/index.html
+++ b/index.html
@@ -35,29 +35,22 @@ layout: default
  	
 
  	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</p>
-	<img alt="lighting a lamp and then picking it up" src="/images/social.png">
+	<img class="frontpage-feature" alt="lighting a lamp and then picking it up" src="/images/social.png">
  	<!-- in a fight cast evade to dodge, cast flare -->
 
 	<p>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</p>
 	
-	<video width="100%" autobuffer="autobuffer" height="auto" autoplay="autoplay" loop>
+	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
 		<source src="https://wintercastgame.com/video/speech-demo.mp4" type="video/mp4">
 		<source src="https://wintercastgame.com/video/speech-demo.webm" type="video/webm">
 	</video>
 
 
 
- 	<p>No skill tree, inventory management, or grinding. Just discover the world and become immersed in the story.</p>
+ 	<p>Discover the world and become immersed in the story. No skill tree, inventory management, or grinding.</p>
 
-
-	<video width="100%" height="auto" controls autoplay="autoplay" loop>
-		<source src="video/place-pier.mp4" type="video/mp4">
-	</video>
-	<video width="100%" height="auto" controls autoplay="autoplay" loop>
-		<source src="video/place-town.mp4" type="video/mp4">
-	</video>
-	<video width="100%" height="auto" controls autoplay="autoplay" loop>
-		<source src="video/place-spirit.mp4" type="video/mp4">
+	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop poster="https://wintercastgame.com/images/places-demo.png">
+		<source src="https://wintercastgame.com/video/places-demo.mp4" type="video/mp4">
 	</video>
 
 
