--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
 	<img class="frontpage-feature" alt="lighting a lamp and then picking it up" src="/images/social.png">
  	<!-- in a fight cast evade to dodge, cast flare -->
 
-	<p>Make friends, negotiate alliances, or kill everybody. After all, you are a vampire.</p>
+	<p>Make friends, negotiate alliances, or kill everybody; After all, you are a vampire.</p>
 	
 	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
 		<source src="https://wintercastgame.com/video/speech-demo.mp4" type="video/mp4">
@@ -47,9 +47,9 @@ layout: default
 
 
 
- 	<p>Discover the world and become immersed in the story. No skill tree, inventory management, or grinding.</p>
+ 	<p>Discover the world and become immersed in the story; No skill tree, inventory management, or grinding.</p>
 
-	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop poster="https://wintercastgame.com/images/places-demo.png">
+	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop poster="https://wintercastgame.com/images/place-spirit.png">
 		<source src="https://wintercastgame.com/video/places-demo.mp4" type="video/mp4">
 	</video>
 
