--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 --- 
-title: Contact
+title: Team
 layout: default 
 ---
 <head>
@@ -11,10 +11,13 @@ layout: default
 	<meta property="og:image:height" content="900">
 </head>
 
-<div class="center-col">
-	<div class="contact-info">
-		<p><a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></p>
-		<p><a href="https://twitter.com/BaronBlackmore" style="display: flex; align-items: center; padding: 0"><img alt="twitter logo" style="height: 36px" src="/images/twitter-logo.png"> @BaronBlackmore</a></p>
+<div>
+<img alt="Sam Ballard Image" src="/images/sam-profile.png">
+<p> Sam Ballard <br><br> Lead <br><br> www.sunlightafterdark.com</p>
+</div>
 
-	</div>
+
+<div>
+<img alt="Sam Ballard Image" src="/images/sam-profile.png">
+<p>Sam Ballard <br><br> Lead <br><br> www.sunlightafterdark.com</p>
 </div>
