--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@ layout: default
 	<div class="team">
 	<div class="contact-info">
 		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
-		<p>Hello, I am sam, one person with many ambitions</p>
+		<p>Sam Ballard // Artist + Developer</p>
 		<p><a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></p>
 		<p><a href="https://twitter.com/BaronBlackmore">@BaronBlackmore</a></p>
 	</div>
 
 	<div class="contact-info">
-		<img alt="Georgia Iacovou Image" src="/images/geo.jpg">
+		<img alt="Georgia Iacovou Image" src="/images/geo.jpg" style="border-radius: 100px">
 		<p>Georgia Iacovou // writer</p>
 		<p><a href="mailto:georgia@georgiaiacovou.com">georgia@georgiaiacovou.com</a></p>
 		<p><a href="https://twitter.com/Geoiac">@Geoiac</a></p>
