--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ layout: default
 	</video>
 
 
-	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
+	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where we also go into the game design.
 	<br>
 	<br>
-	Plus, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation. (when I have one)</h5>
+	Plus, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation. (when I have one >_>)</h5>
 
 	{% include mailchimp-signup.html %}
 
