--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
 
 	<p>Make friends, negotiate alliances, or kill everybody; After all, you are a vampire.</p>
 	
-	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
+	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
 		<source src="https://wintercastgame.com/video/speech-demo.mp4" type="video/mp4">
 		<source src="https://wintercastgame.com/video/speech-demo.webm" type="video/webm">
 	</video>
@@ -49,7 +49,7 @@ layout: default
 
  	<p>Discover the world and become immersed in the story; No skill tree, inventory management, or grinding.</p>
 
-	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop poster="https://wintercastgame.com/images/place-spirit.png">
+	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
 		<source src="https://wintercastgame.com/video/places-demo.mp4" type="video/mp4">
 	</video>
 
