--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ layout: default
  	<p>Discover the world and become immersed in the story; No skill tree, inventory management, or grinding.</p>
 
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
-		<source src="https://wintercastgame.com/video/places-demo.mp4" type="video/mp4">
+		<source src="https://wintercastgame.com/video/places.mp4" type="video/mp4">		
+		<source src="https://wintercastgame.com/video/places.webm" type="video/webm">
 	</video>
 
 
@@ -62,9 +63,8 @@ layout: default
 	{% include mailchimp-signup.html %}
 
  	<h5>If you’re interested in knowing more, or just want to shoot me a question, reach out at <a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></h5>
- 	<img alt="text box with bite yes or no decision" src="/images/social.png">
 
- 	<p style="text-align: center; margin-top: 60px;"><a href="#nav">Back to top</a></p>
+ 	<p><a href="#nav">Back to top</a></p>
 
 
 </div>
