--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@ layout: default
 </div>
 
 <div class="center-col frontpage-content">
+	<div style="padding:0 20px">
 	<img alt="Wintercast" src="/images/title.png">
-
+	</div>
 	<!-- video -->
 
 	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
