--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@ layout: default
 
 	<p>Make friends, negotiate alliances, or kill everybody; After all, you are a vampire.</p>
 	
+	<div class="video-holder">
 	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
 		<source src="https://wintercastgame.com/video/speech-demo.mp4" type="video/mp4">
 		<source src="https://wintercastgame.com/video/speech-demo.webm" type="video/webm">
 	</video>
-
+	</div>
 
 
  	<p>Discover the world and become immersed in the story; No skill tree, inventory management, or grinding.</p>
