fix images for mobile

--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@ layout: default
 
  	<p>Discover the world and become immersed in the story; No skill tree, inventory management, or grinding.</p>
 
+ 	<div class="video-holder">
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
 		<source src="https://wintercastgame.com/video/places.mp4" type="video/mp4">		
 		<source src="https://wintercastgame.com/video/places.webm" type="video/webm">
 	</video>
-
+	</div>
 
 	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where we also go into the game design.
 	<br>
