--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ layout: default
 
  	<div class="video-holder">
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
-		<source src="https://wintercastgame.com/video/webtour.mp4" type="video/mp4">		
-		<source src="https://wintercastgame.com/video/webtur.webm" type="video/webm">
+		<source src="https://wintercastgame.com/video/walk.mp4" type="video/mp4">		
+		<source src="https://wintercastgame.com/video/walk.webm" type="video/webm">
 	</video>
 	</div>
 
