add magic video

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@ layout: default
  	
 
  	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</p>
-	<img class="frontpage-feature" alt="lighting a lamp and then picking it up" src="/images/social.png">
- 	<!-- in a fight cast evade to dodge, cast flare -->
+	<div class="video-holder">
+	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
+		<source src="https://wintercastgame.com/video/magic-demo.mp4" type="video/mp4">
+		<source src="https://wintercastgame.com/video/magic-demo.webm" type="video/webm">
+	</video>
+	</div>
 
 	<p>Make friends, negotiate alliances, or kill everybody; After all, you are a vampire.</p>
 	
